feat: handle register and service send mail

--- a/.env
+++ b/.env
@@ -5,3 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb://localhost:27017/food-delivery"
+
+ACTIVATION_TOKEN=596460390356224
+
+STMP_HOST=smtp.gmail.com
+STMP_SERVICE=gmail
+SMTP_USER=sinhnguyen.me@gmail.com
+STMP_PASSWORD="zrsy bpux zqeh yqhr"
