--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@apollo/gateway": "^2.6.2",
     "@apollo/subgraph": "^2.6.2",
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/apollo": "^12.0.11",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
@@ -31,10 +32,13 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.7.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/ejs": "^3.1.5",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.0",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "nodemailer": "^6.9.7",
     "prisma": "^5.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
